--- a/index.html
+++ b/index.html
@@ -726,7 +726,7 @@
                 <div class="col-lg-6 col-md-12">
                     <div class="hero-text-content">
                         <h1 class="hero-title">
-                            Selamat Datang
+                            Selamat Datang di
                         </h1>
                         <p class="hero-subtitle">
                             Majelis Perwakilan Kelas MAN IC OKI
@@ -1022,7 +1022,7 @@
                                             <div class="anggota-card">
                                                 <img src="img/aspi3.webp" class="anggota-img-wide" alt="Anggota Aspirasi - Muhammad Abyan Farras">
                                                 <div class="anggota-caption">
-                                                    <h5>M Muhammad Abyan Farras</h5>
+                                                    <h5>Muhammad Abyan Farras</h5>
                                                     <p>Anggota</p>
                                                 </div>
                                             </div>
@@ -1297,4 +1297,5 @@
         });
     </script>
 </body>
+
 </html>
