--- a/index.html
+++ b/index.html
@@ -729,7 +729,7 @@
                             Selamat Datang di
                         </h1>
                         <p class="hero-subtitle">
-                            Majelis Perwakilan Kelas MAN IC OKI
+                            Majelis Permusyawaratan Kelas MAN IC OKI
                         </p>
                         <p class="hero-description">
                             Bersama membangun masa depan yang lebih baik untuk seluruh siswa. 
@@ -1299,3 +1299,4 @@
 </body>
 
 </html>
+
