--- a/index.html
+++ b/index.html
@@ -739,7 +739,7 @@
                             <a href="#divisi" class="btn-primary-custom">
                                 Komisi
                             </a>
-                            <a href="angket.html" class="btn-outline-custom">
+                            <a href="https://forms.gle/eQpoQv5HkvtQJ7sL6" target="blank" class="btn-outline-custom">
                                 Isi Angket Aspirasi
                             </a>
                         </div>
@@ -1299,4 +1299,5 @@
 </body>
 
 </html>
+
 
