--- a/index.html
+++ b/index.html
@@ -1374,6 +1374,10 @@
         </div>
     </footer>
 
+    <script>
+      window.va = window.va || function () { (window.vaq = window.vaq || []).push(arguments); };
+    </script>
+<script defer src="/_vercel/insights/script.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.bundle.min.js"></script>
     <script>
         // Smooth scrolling untuk anchor links
@@ -1434,4 +1438,5 @@
 </body>
 
 </html>
+
 
