--- a/index.html
+++ b/index.html
@@ -1341,8 +1341,8 @@
                             <li>Kontribusi nyata untuk sekolah</li>
                         </ul>
                         <div class="text-center mt-4">
-                            <a href="formulir-pendaftaran-mpk.docx" class="btn-unduh-formulir" download>
-                                Unduh Formulir Pendaftaran
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdbSkwNpqiDdxEEovnet5HTmWy_Z1mDjdgsiRf6U-fupZZbkA/viewform?usp=header" class="btn-unduh-formulir">
+                                Daftar Sekarang
                             </a>
                         </div>
                     </div>
@@ -1438,6 +1438,7 @@
 </body>
 
 </html>
+
 
 
 
