--- a/index.html
+++ b/index.html
@@ -1341,7 +1341,7 @@
                             <li>Kontribusi nyata untuk sekolah</li>
                         </ul>
                         <div class="text-center mt-4">
-                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdbSkwNpqiDdxEEovnet5HTmWy_Z1mDjdgsiRf6U-fupZZbkA/viewform?usp=header" class="btn-unduh-formulir">
+                            <a href="https://docs.google.com/forms/d/e/1FAIpQLSdbSkwNpqiDdxEEovnet5HTmWy_Z1mDjdgsiRf6U-fupZZbkA/viewform?usp=header" target="blank" class="btn-unduh-formulir">
                                 Daftar Sekarang
                             </a>
                         </div>
@@ -1438,6 +1438,7 @@
 </body>
 
 </html>
+
 
 
 
