--- a/index.html
+++ b/index.html
@@ -1615,7 +1615,7 @@
                         <!-- BPH -->
                         <div class="accordion-item mb-3">
                             <h2 class="accordion-header" id="assBPHHead">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#assBPH" aria-expanded="true" aria-controls="assBPH">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#assBPH" aria-expanded="false" aria-controls="assBPH">
                                     <i class="fas fa-users-cog me-2"></i> BPH (Badan Pengurus Harian)
                                 </button>
                             </h2>
@@ -1628,7 +1628,7 @@
                         <!-- KOMINFO -->
                         <div class="accordion-item mb-3">
                             <h2 class="accordion-header" id="assKominfoHead">
-                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#assKominfo" aria-expanded="false" aria-controls="assKominfo">
+                                <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#assKominfo" aria-expanded="true" aria-controls="assKominfo">
                                     <i class="fas fa-globe me-2"></i> Komisi Informasi
                                 </button>
                             </h2>
@@ -1883,5 +1883,6 @@
     </script>
 </body>
 </html>
+
 
 
