--- a/index.html
+++ b/index.html
@@ -1608,7 +1608,7 @@
                             <li>Tugas bertanda (Opsional) tidak wajib namun menambah nilai.</li>
                             <li>Pastikan seluruh materi orisinal. Plagiarisme = Diskualifikasi.</li>
                         </ul>
-                        <p class="mb-1 small text-secondary">Deadline pengumpulan: <strong>15 November 2025 pukul 23.59 WIB</strong><br> Link pengumpulan form: (akan dibagikan panitia). Simpan dulu tautan Drive Anda.</p>
+                        <p class="mb-1 small text-secondary">Deadline pengumpulan: <strong>18 November 2025 pukul 23.59 WIB</strong><br> Link pengumpulan form: <a href="https://drive.google.com/drive/folders/1jtVxHQGVdV12Ad969_RK0uIlZI-WLl58?usp=sharing">Klik ini</a>.</p>
                     </div>
 
                     <div class="accordion" id="kisiKomisi">
@@ -1836,7 +1836,7 @@
 
         // Countdown timer
         function updateCountdown() {
-            const deadline = new Date('September 17, 2025 23:59:00').getTime();
+            const deadline = new Date('September 18, 2025 23:59:00').getTime();
             const now = new Date().getTime();
             const timeLeft = deadline - now;
             
@@ -1883,6 +1883,7 @@
     </script>
 </body>
 </html>
+
 
 
 
