--- a/index.html
+++ b/index.html
@@ -1600,7 +1600,7 @@
                             <i class="fas fa-info-circle me-2"></i> Petunjuk Umum Pengumpulan
                         </h5>
                         <ul class="syarat-list">
-                            <li>Format pengumpulan: unggah ke Google Drive pribadi (akses Anyone with link - Viewer).</li>
+                            <li>Format pengumpulan: unggah ke Google Drive yang telah disediakan di bawah (akses Anyone with link - Viewer).</li>
                             <li>Buat folder: MPK25_NamaLengkap_Kelas (contoh: MPK25_AisyahNurF_X1).</li>
                             <li>Di dalam folder buat subfolder per komisi (BPH / KOMINFO / ASPIRASI / ADVOKASI / LEGISLASI) sesuai yang dikerjakan.</li>
                             <li>Setiap file diberi awalan: [Komisi] - [Jenis Tugas] - [Nama]. Contoh: KOMINFO - Feed 1 - Aisyah.png</li>
@@ -1881,6 +1881,7 @@
     </script>
 </body>
 </html>
+
 
 
 
