--- a/index.html
+++ b/index.html
@@ -1607,7 +1607,7 @@
                             <li>Tugas bertanda (Opsional) tidak wajib namun menambah nilai.</li>
                             <li>Pastikan seluruh materi orisinal. Plagiarisme = Diskualifikasi.</li>
                         </ul>
-                        <p class="mb-1 small text-secondary">Deadline pengumpulan: <strong>18 September 2025 pukul 23.59 WIB</strong><br> Link pengumpulan form: <a href="https://drive.google.com/drive/folders/1jtVxHQGVdV12Ad969_RK0uIlZI-WLl58?usp=sharing" target="blank">Klik ini</a>.</p>
+                        <p class="mb-1 small text-secondary">Deadline pengumpulan: <strong>18 September 2025 pukul 23.59 WIB</strong><br> Link pengumpulan Karya: <a href="https://drive.google.com/drive/folders/1jtVxHQGVdV12Ad969_RK0uIlZI-WLl58?usp=sharing" target="blank">Klik ini</a>.</p>
                     </div>
 
                     <div class="accordion" id="kisiKomisi">
@@ -1881,6 +1881,7 @@
     </script>
 </body>
 </html>
+
 
 
 
