--- a/index.html
+++ b/index.html
@@ -1056,8 +1056,8 @@
                             <a href="#divisi" class="btn-primary-custom">
                                 <i class="fas fa-arrow-right me-2"></i> Jelajahi Komisi
                             </a>
-                            <a href="https://forms.gle/eQpoQv5HkvtQJ7sL6" target="blank" class="btn-outline-custom">
-                                <i class="fas fa-comment-dots me-2"></i> Sampaikan Aspirasi
+                            <a href="https://docs.google.com/document/d/1iunKgFlWeQChZR-9qX4rJ9tGv6PEGI4OTdtgYwgCpW8/edit?usp=sharing" target="blank" class="btn-outline-custom">
+                                <i class="fas fa-comment-dots me-2"></i> Soal Tes Tertulis
                             </a>
                         </div>
                     </div>
