--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>MPK Man Insan Cendekia OKI</title>
-<meta name="description" content="Website Resmi Majelis Permusyawaratan Kelas MAN Insan Cendekia OKI, berisi informasi kegiatan, aspirasi siswa, dokumentasi program kerja, dan wadah komunikasi antar warga kelas untuk mewujudkan kepemimpinan yang aktif dan transparan.">
+    <title>MPK MAN IC OKI</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="img/mpk.png" type="image/png">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&family=Space+Grotesk:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -1683,6 +1682,7 @@
 
 </body>
 </html>
+
 
 
 
