--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>MPK MAN Insan Cendekia OKI</title>
+    <meta name="keywords" content="MPK MAN IC OKI, Majelis Permusyawaratan Kelas, organisasi siswa, aspirasi siswa, MAN Insan Cendekia OKI, komisi MPK, BPH, Kominfo, Aspirasi, Advokasi, Legislasi,MPK ic oki">
     <meta name="description" content="Website Resmi Majelis Permusyawaratan Kelas MAN Insan Cendekia OKI, berisi informasi kegiatan, aspirasi siswa, dokumentasi program kerja, dan wadah komunikasi antar warga kelas untuk mewujudkan kepemimpinan yang aktif dan transparan.">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="icon" href="img/mpk.png" type="image/png">
@@ -1680,9 +1681,20 @@
         AOS.init();
     </script>
 
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Organization",
+      "name": "MPK MAN Insan Cendekia OKI",
+      "url": "https://www.manicoki.com",
+      "logo": "https://www.manicoki.com/assets/img/mpk.png",
+      "description": "Majelis Permusyawaratan Kelas MAN Insan Cendekia OKI"
+    }
+    </script>
 
 </body>
 </html>
+
 
 
 
