--- a/index.html
+++ b/index.html
@@ -1686,14 +1686,15 @@
       "@context": "https://schema.org",
       "@type": "Organization",
       "name": "MPK MAN Insan Cendekia OKI",
-      "url": "https://www.manicoki.com",
-      "logo": "https://www.manicoki.com/assets/img/mpk.png",
+      "url": "https://mpkicoki.vercel.app",
+      "logo": "https://mpkicoki.vercel.app/assets/img/mpk.png",
       "description": "Majelis Permusyawaratan Kelas MAN Insan Cendekia OKI"
     }
     </script>
 
 </body>
 </html>
+
 
 
 
