--- a/lihat-menfest.html
+++ b/lihat-menfest.html
@@ -20,7 +20,7 @@
             <form id="cariMenfestForm" autocomplete="off">
                 <div class="mb-3">
                     <label for="namaCari" class="form-label">
-                        <i class="fas fa-user-circle me-1"></i> Nama/NISN Penerima
+                        <i class="fas fa-user-circle me-1"></i> Nama Lengkap
                     </label>
                     <input type="text" class="form-control" id="namaCari" name="namaCari" placeholder="Masukkan nama lengkap atau NISN" required>
                 </div>
@@ -95,9 +95,6 @@
                     <div class="card mb-3 shadow-sm">
                         <div class="card-body">
                             <div class="d-flex justify-content-between align-items-start mb-2">
-                                <div class="fw-bold text-primary">
-                                    <i class="fas fa-user-secret me-1"></i> Anonymous
-                                </div>
                             </div>
                             <div class="menfest-content">
                                 ${escapeHtml(m.isi)}
@@ -117,7 +114,7 @@
                 hasilDiv.innerHTML = `
                     <div class="alert alert-warning text-center">
                         <i class="fas fa-info-circle me-2"></i> 
-                        Tidak ada menfest ditemukan untuk <strong>${escapeHtml(nama)}</strong>
+                        Tidak ada menfest ditemukan untuk <strong>${escapeHtml(nama)} (Apakah Sudah Kapital Semua?)</strong>
                     </div>`;
             }
 
@@ -170,4 +167,5 @@
     });
     </script>
 </body>
+
 </html>
