--- a/menfest.html
+++ b/menfest.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tambah Menfest | MPK MAN IC OKI</title>
+    <title>Tambah Menfess | MPK MAN IC OKI</title>
     <link rel="icon" href="assets/img/mpk.png" type="image/png">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
@@ -13,7 +13,7 @@
     <div class="container">
         <div class="menfest-form-card">
             <h2 class="mb-4 text-center" style="font-family:'Space Grotesk',sans-serif;font-weight:700;">
-                <i class="fas fa-envelope-open-text me-2"></i> Tambah Menfest
+                <i class="fas fa-envelope-open-text me-2"></i> Tambah Menfess
             </h2>
             <form id="menfestForm" autocomplete="off" action="" method="post">
                 <div class="mb-3">
@@ -21,14 +21,14 @@
                     <input type="text" class="form-control" id="nama" name="nama" placeholder="Masukkan nama lengkap atau NISN" required>
                 </div>
                 <div class="mb-3">
-                    <label for="isi" class="form-label">Isi Menfest</label>
-                    <textarea class="form-control" id="isi" name="isi" rows="5" placeholder="Tulis pesan menfest di sini..." required></textarea>
+                    <label for="isi" class="form-label">Isi Menfess</label>
+                    <textarea class="form-control" id="isi" name="isi" rows="5" placeholder="Tulis pesan menfess di sini..." required></textarea>
                 </div>
                 <button type="submit" class="btn btn-success w-100 mt-3">
-                    <i class="fas fa-paper-plane me-1"></i> kirim Menfest
+                    <i class="fas fa-paper-plane me-1"></i> kirim Menfess
                 </button>
                 <div id="successMsg" class="success-message mt-3 d-none">
-                    <i class="fas fa-check-circle me-2"></i> Menfest berhasil dikirim!
+                    <i class="fas fa-check-circle me-2"></i> Menfess berhasil dikirim!
                 </div>
             </form>
         </div>
@@ -37,4 +37,5 @@
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js/dist/umd/supabase.min.js"></script>
     <script src="assets/menfest.js"></script>
 </body>
+
 </html>
