--- a/index.html
+++ b/index.html
@@ -137,10 +137,10 @@
             <div class="row align-items-center min-vh-100">
                 <div class="col-lg-6 col-md-12">
                     <div class="hero-text-content" data-aos="fade-right" data-aos-duration="1000">
-                        <h1 class="hero-title">
-                            Selamat Datang di
+                        <h1 class="hero-title" >
+                            Selamat Datang di Website Resmi
                         </h1>
-                        <p class="hero-subtitle">
+                        <p class="hero-subtitle" id="typing-text">
                             Majelis Permusyawaratan Kelas
                         </p>
                         <p class="hero-description">
@@ -615,7 +615,7 @@
             <div class="row">
                 <div class="col-12">
                     <div class="rundown-timeline-modern">
-                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="600">
                             <div class="step-number">01</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-file-alt"></i></div>
@@ -626,7 +626,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="600">
                             <div class="step-number">02</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-users"></i></div>
@@ -637,7 +637,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="600">
                             <div class="step-number">03</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-comments"></i></div>
@@ -648,7 +648,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="600">
                             <div class="step-number">04</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-handshake"></i></div>
@@ -659,7 +659,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="600">
                             <div class="step-number">05</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-list-ol"></i></div>
@@ -670,7 +670,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="600">
                             <div class="step-number">06</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-bullhorn"></i></div>
@@ -681,7 +681,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="600">
                             <div class="step-number">07</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-microphone-alt"></i></div>
@@ -692,7 +692,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-left" data-aos-delay="600">
                             <div class="step-number">08</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-hourglass-half"></i></div>
@@ -703,7 +703,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="200">
+                        <div class="rundown-step-modern" data-aos="fade-right" data-aos-delay="600">
                             <div class="step-number">09</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-vote-yea"></i></div>
@@ -714,7 +714,7 @@
                             </div>
                         </div>
 
-                        <div class="rundown-step-modern final-step" data-aos="fade-left" data-aos-delay="200">
+                        <div class="rundown-step-modern final-step" data-aos="fade-left" data-aos-delay="600">
                             <div class="step-number">10</div>
                             <div class="step-icon-wrapper">
                                 <div class="step-icon"><i class="fas fa-award"></i></div>
@@ -819,4 +819,3 @@
 
 </body>
 </html>
-
