--- a/lihat-menfest.html
+++ b/lihat-menfest.html
@@ -23,7 +23,7 @@
                         <i class="fas fa-user-circle me-1"></i> Nama Lengkap
                     </label>
                     <input type="text" class="form-control" id="namaCari" name="namaCari" placeholder="Masukkan nama lengkap" required>
-                    <span class="text-muted">Hindari pemakain kata muhammad/M./muhamad</span>
+                    <span class="text-white">Hindari pemakain kata muhammad/M./muhamad</span>
                 </div>
                 <button type="submit" class="btn btn-success w-100 mt-3" id="btnCari">
                     <i class="fas fa-search me-2"></i> Cari Menfess
@@ -181,4 +181,5 @@
     </script>
 </body>
 </html>
+
 
