--- a/index.html
+++ b/index.html
@@ -152,8 +152,8 @@
                             <a href="#divisi" class="btn-primary-custom">
                                 <i class="fas fa-arrow-right me-2"></i> Jelajahi Komisi
                             </a>
-                            <a href="" target="blank" class="btn-outline-custom">
-                                <i class="fas fa-comment-dots me-2"></i> Soal Tes Tertulis
+                            <a href="mpkicoki.vercel.app/lihat-menfest.html" class="btn-outline-custom">
+                                <i class="fas fa-comment-dots me-2"></i> Lihat Menfess
                             </a>
                         </div>
                     </div>
@@ -819,3 +819,4 @@
 
 </body>
 </html>
+
