--- a/index.html
+++ b/index.html
@@ -149,10 +149,10 @@
                             untuk menciptakan lingkungan belajar yang lebih baik dan kondusif.
                         </p>
                         <div class="cta-buttons">
-                            <a href="#divisi" class="btn-primary-custom">
-                                <i class="fas fa-arrow-right me-2"></i> Jelajahi Komisi
+                            <a href="#kabinet" class="btn-primary-custom">
+                                <i class="fas fa-arrow-right me-2"></i> Cari tahu!
                             </a>
-                            <a href="mpkicoki.vercel.app/lihat-menfest.html" class="btn-outline-custom">
+                            <a href="lihat-menfest.html" class="btn-outline-custom">
                                 <i class="fas fa-comment-dots me-2"></i> Lihat Menfess
                             </a>
                         </div>
@@ -819,4 +819,5 @@
 
 </body>
 </html>
+
 
