--- a/lihat-menfest.html
+++ b/lihat-menfest.html
@@ -72,7 +72,7 @@
 
     // Validasi: minimal 2 kata
     function validateTwoWords(text) {
-        return text.length > 3;
+        return text.length >= 3;
     }
     
     // Function untuk mencari menfest (dipisah agar tidak blocking UI)
@@ -180,6 +180,7 @@
     </script>
 </body>
 </html>
+
 
 
 
